# tempo

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.agents/rules/: tauri-cargo.mdc
.github/workflows/: cache-warm.yml  release.yml
docs/: builtin-plugins-design.md  plugin-system-design.md
examples/plugins/com.example.hello/: README.md  index.html  index.js  main.mjs  manifest.json
plugin-runtime/: bootstrap.mjs
plugin-ui/: bridge-client.js
public/: splashscreen.html
scripts/: create-staged-windows-package.ps1  generate-icons.mjs  generate-latest-json.mjs  generate-staged-latest-json.mjs  run-tauri-build.mjs  sync-version.mjs  tauri-build.mjs  tauri-dev.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icons.rs  asset_protocol.rs  auxiliary_windows.rs  clipboard_db.rs  clipboard_images.rs  clipboard_watcher.rs  commands.rs  db.rs  lib.rs  logging.rs  macos_dock.rs  macos_overlay_panel.rs  macos_shelf_dismiss.rs  main.rs  platform.rs  pomodoro.rs  staged_update.rs  todo_images.rs  tray_menu.rs
src-tauri/src/commands/: clipboard.rs  hosts.rs  launcher.rs  markdown.rs  mod.rs  plugins.rs  pomodoro_cmds.rs  port_manager.rs  reports.rs  settings.rs  snippets.rs  todos.rs  tracker.rs  translate.rs  window.rs
src-tauri/src/mcp/: auth.rs  mod.rs  server.rs
src-tauri/src/plugins/: bridge.rs  hooks.rs  host.rs  ids.rs  loader.rs  manifest.rs  mcp_bridge.rs  mod.rs  package.rs  paths.rs  runtime.rs  storage.rs  supervisor.rs  trust.rs  ui.rs
src-tauri/src/tests/: clipboard_db.rs  clipboard_watcher.rs  db.rs  logging.rs  mod.rs  pomodoro.rs  settings.rs  staged_update.rs  tracker.rs
src/apps/: PluginAppHost.tsx  constants.ts  icon.tsx  index.ts  navigation.tsx  registry.tsx  session.ts  types.ts
src/apps/actions/: builtin.ts  registry.ts
src/apps/plugins/: syncContributions.ts
src/components/: AppIcon.tsx  CodeEditor.tsx  CodeHighlight.tsx  FlipNumber.tsx  ImagePreviewDialog.tsx  LinkActionPopover.tsx  OnboardingDialog.tsx  QuitDialog.tsx  ReminderDialog.tsx  TextWithLinks.tsx  TrackingStatus.tsx
src/components/clipboard/: ShelfCard.tsx
src/components/layout/: AppLayout.tsx  nav-sidebar.tsx
src/components/todos/: MarkdownPreview.tsx  TodoCreateDialog.tsx  TodoSubtasks.tsx  TodoTags.tsx
src/components/ui/: badge.tsx  button.tsx  calendar.tsx  card.tsx  data-table.tsx  dialog.tsx  input.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  tag.tsx
src/hooks/: useAuxiliaryWindow.ts
src/lib/: api.ts  blurHideGuard.ts  boot.ts  markdownImages.ts  nativeFileDialog.ts  notifications.ts  paletteClipboardSeed.ts  shortcut.ts  sound.ts  tagHistory.ts  theme.ts  toastOptions.ts  todoMeta.ts  update.ts  updateStore.ts  utils.ts
src/pages/: AboutPage.tsx  ClipboardPage.tsx  ClipboardPickerPage.tsx  CommandPalettePage.tsx  EyeCareReminderPage.tsx  HomePage.tsx  PomodoroFloatPage.tsx  PomodoroPage.tsx  QuickTodoPage.tsx  ReportsPage.tsx  SettingsPage.tsx  ShelfBackdropPage.tsx  ShelfPickerPage.tsx  SnippetPickerPage.tsx  SnippetsPage.tsx  TodoPage.tsx
src/pages/settings/: PluginSettingsSection.tsx
src/pages/todos/: TodoCalendarView.tsx  TodoListSections.tsx  TodoPage.tsx  TodoPagination.tsx  todoPageUtils.ts
src/pages/tools/: ToolsHubPage.tsx  ToolsLayout.tsx
src/pages/tools/hosts/: HostsPage.tsx
src/pages/tools/port-manager/: PortManagerPage.tsx
src/pages/tools/translate/: TranslatePage.tsx
src/styles/: base.css  index.css  layer.css  tokens.css
src/styles/app/: motion.css  shell.css
src/styles/components/: code-editor.css  github-markdown.css  glass.css  shelf-card.css  todo-calendar.css  todo-create-dialog.css  todo-floating-label.css  ui.css
src/styles/overlays/: command-palette.css  eye-care.css  pomodoro-float.css  quick-todo.css  shelf-picker.css
src/styles/platform/: linux.css  macos.css  windows.css
src/styles/platform/linux/: pomodoro-float.css  quick-todo.css  shelf-picker.css
src/styles/platform/macos/: command-palette.css  pomodoro-float.css  quick-todo.css  shelf-picker.css
src/styles/platform/windows/: pomodoro-float.css  quick-todo.css  shelf-picker.css
src/types/: index.ts
