[package]
name = "tempo"
version = "1.0.5"
description = "Tempo - screen time and focus timer"
authors = ["zekun"]
edition = "2021"

[lints.rust]
unexpected_cfgs = "allow"

[lib]
name = "tempo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for transparent overlay windows (quick todo, eye-care) on macOS
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
active-win-pos-rs = "0.8"
parking_lot = "0.12"
arboard = "3"
base64 = "0.22"
png = "0.17"
url = "2"
zip = { version = "4.6", default-features = false, features = ["deflate-flate2"] }
tauri-plugin-process = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.5"
tracing-log = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
# NSPanel relies on AppKit and must only be resolved/compiled on macOS.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1", version = "2.1.0" }
core-foundation = "0.10"
core-foundation-sys = "0.8"
appkit-nsworkspace-bindings = "0.1"
objc = "0.2"
block = "0.1"
window-vibrancy = "0.6"
flate2 = "1.1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
window-vibrancy = "0.6"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
